test mit neuer magic.php

--- a/trunk/basement/templates/devel/viewer.tem.html
+++ b/trunk/basement/templates/devel/viewer.tem.html
@@ -24,7 +24,8 @@
 <ul>
     <!--##loop-list-->
     <li class="thumbs" style="background:!{bg};">
-        <a href="!{link}" class="pic"><img src="!{src}" alt="!{title}" title="!{title}" /></a>
+<!--         <a href="!{link}" class="pic"><img src="!{src}" alt="!{title}" title="!{title}" /></a> -->
+        <a href="!{link}" class="pic"><img src="/images/magic-ng.php?file=!{id}.!{type}&amp;size=96" alt="!{title}" title="!{title}" /></a>
     </li>
     <!--##cont-->
 </ul>
