suchfelder in der file-liste in einer zeile

--- a/trunk/basement/css/devel/eed.css
+++ b/trunk/basement/css/devel/eed.css
@@ -185,6 +185,14 @@ div.clearer {
         width: 200px;
     }
 
+    #eEd fieldset.float label.small {
+        width: 130px;
+    }
+
+    #eEd fieldset.float label.small input, #eEd fieldset.float label.small textarea, #eEd fieldset.float label.small select {
+        width: 125px;
+    }
+
 /* ---------------------*/
 
 
