prototype, script.aculo.us 1.8.0 support

--- a/trunk/basement/templates/devel/base.tem.html
+++ b/trunk/basement/templates/devel/base.tem.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../css/default/screen.css" type="text/css" />
     <link rel="stylesheet" href="../../css/devel/eed.css" type="text/css" />
     <title>!#specialvars_pagetitle</title>
+    <script src="../../js/devel/prototype.js" type="text/javascript"></script>
+    <script src="../../js/devel/scriptaculous.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="page">
