einbinden der "other" dateien in den contented

--- a/trunk/basement/templates/devel/-141347382.modify.js-nextgen.tem.html
+++ b/trunk/basement/templates/devel/-141347382.modify.js-nextgen.tem.html
@@ -248,6 +248,16 @@ Das einfügen von Tags funktioniert ohne Javascript nicht. Bitte aktivieren Sie J
         }
     }
 
+
+    function ebInsertother(myField, i, defaultLink, defaultTitle, defaultEnd) {
+        var myValue = '[LINK'
+                + defaultLink
+                + ']' + prompt('Titel:', defaultTitle)
+                + '[/LINK' + defaultEnd + ']';
+        ebInsertContent(myField, myValue);
+    }
+
+
     function ebInsertLink(myField, i, defaultValue) {
         if (!defaultValue) {
             defaultValue = 'http://';
