--- a/trunk/basement/templates/default/auth.tem.html
+++ b/trunk/basement/templates/default/auth.tem.html
@@ -46,7 +46,10 @@
 
 <!--##hide-authTools-->
 <p>#(desc)<br />
-!{links}</p>
+<!--##loop-authTools-->
+<a href="!{url}" title="!{title}">!{label}!{end}</a>
+<!--##cont-->
+</p>
 <!--##show-->
 
 <!--##hide-authBox-->
