label funktioniert nicht

--- a/trunk/basement/templates/devel/-141347382.modify.js-nextgen.tem.html
+++ b/trunk/basement/templates/devel/-141347382.modify.js-nextgen.tem.html
@@ -108,8 +108,8 @@ Das einfügen von Tags funktioniert ohne Javascript nicht. Bitte aktivieren Sie J
             ebShowButton(ebButtons[i], i, position);
         }
         if ( position == 'T' ) {
-            document.write('<input type="submit" name="sel[]" id="eb_submit" value="GRP" title="#(add_grp)" class="buttag"/>');
-            document.write('<input type="submit" name="add[]" id="eb_submit" value="FILE" title="#(add_file)" class="buttag"/>');
+            document.write('<input type="submit" name="sel[]" id="eb_submit" value="GRP" title="Gruppe auswaehlen" class="buttag"/>');
+            document.write('<input type="submit" name="add[]" id="eb_submit" value="FILE" title="Datei auswaehlen" class="buttag"/>');
         }
         if ( position == 'B' ) {
             document.write('<input type="button" id="eb_close" value="X" title="Schliesse alle Tags" onclick="ebCloseAllTags();" class="buttag" />');
