--- a/trunk/basement/css/default/eed.css
+++ b/trunk/basement/css/default/eed.css
@@ -82,6 +82,18 @@ a img{
     padding:0;
 }
 
+#eEd .icon {
+    margin-top: 0px;
+/*     display: block; */
+    width: 24px;
+    height: 24px;
+    border: 1px solid #ddd;
+/*     padding: .5ex 1ex; */
+    background-color: #eee;
+    text-decoration: none;
+    cursor: default;
+}
+
 /* ---------------------*/
 
 
@@ -185,23 +197,82 @@ div.clearer {
         width: 200px;
     }
 
+    #eEd fieldset.float label.small {
+        width: 130px;
+    }
+
+    #eEd fieldset.float label.small input, #eEd fieldset.float label.small textarea, #eEd fieldset.float label.small select {
+        width: 125px;
+    }
+
 /* ---------------------*/
 
+/*----------------------
+  reiter-struktur
+  ----------------------*/
+
+    #eEd .tabbed {
+        height:3em;
+        position:relative;
+    }
+
+    #eEd .tabbed ul {
+        position:absolute;
+        bottom:-1px;
+    }
+
+    #eEd .tabbed ul li {
+        display:inline;
+    }
+
+    #eEd .tabbed ul li a {
+        background:#eee;
+        border:1px solid #aaa;
+        border-bottom-color:#666;
+        color:#aaa;
+        display:block;
+        float:left;
+        margin:1px 2px 0pt 1px;
+        padding:2px 6px;
+        text-decoration:none;
+    }
+
+    #eEd .tabbed ul li a.selected {
+        background:#efefef;
+        border-color:#666666;
+        border-style:solid solid none;
+        border-width:1px 1px medium;
+        color:inherit;
+        margin-top:0;
+        padding-bottom:4px;
+    }
+
+/* ---------------------*/
 
 
 /*----------------------
   menued special
   ----------------------*/
 
-#eEd ul.menued {
-    padding: 0pt 0pt 0pt 20pt;
+#eEd ul.menued ul {
+    margin: 0pt 0pt 0pt 20pt;
 }
-#eEd li.menued {
-    border-top: 1px solid #ddd;
-    list-style : none;
-}
-#eEd li.menued a{
+#eEd ul.menued a {
     text-decoration:none;
+}
+
+#eEd ul.menued li {
+    clear:both;
+    border-top: 1px solid #ddd;
+}
+#eEd ul.menued input {
+    width: auto;
+    height: auto;
+    margin-top: 0;
+}
+
+#eEd .red {
+    color: red;
 }
 
 /* ---------------------*/
@@ -215,7 +286,7 @@ div.clearer {
 li.thumbs {
         border: 1px solid silver;
         float: left;
-        height: 130px;
+/*         height: 130px; */
         margin: 5px;
         width: 102px;
         text-align: center;
@@ -230,6 +301,26 @@ li.thumbs a.pic {
         width: 96px;
 }
 
+/* compilation */
+.selection_teaser {
+    background:#eee;
+    margin:5px 0;
+    padding:0 3px;
+}
+.selection_teaser div {
+    background:#fff;
+}
+.selection_teaser li {
+    border: 1px solid #eee;
+    margin: 2px;
+    padding:0;
+    -moz-border-radius: 0;
+}
+.selection_teaser span {
+    clear:both;
+    font-size:0.9em;
+}
+
 /* ---------------------*/
 
 
@@ -238,26 +329,57 @@ li.thumbs a.pic {
   cmsed special (testing only)
   ----------------------*/
 
-.buttag {
+
+#cEd li.files {
+        border: 1px solid silver;
+        float: left;
+        margin: 5px;
+        padding: 3px;
+        -moz-border-radius: 5px;
+}
+
+
+#cEd fieldset.ce {
+    border: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    display: block;
+    clear: both;
+}
+
+#cEd .buttag {
+    width: auto;
     border: 1px solid #ddd;
     padding: .5ex 1ex;
-    background-color: #fff;
+    background-color: #eee;
     text-decoration: none;
     cursor: default;
 }
 
-.butoth {
+#cEd .butfil {
+    width: 20px;
+    height: 20px;
+    border: 0;
+    padding: .5ex 1ex;
+    background-color: #eee;
+    text-decoration: none;
+    cursor: default;
+}
+
+#cEd .butoth {
+    float: left;
+    height: auto;
     border: 1px solid #ddd;
     border-style: solid;
     margin: 0 0 0 0;
     padding: 0.2ex 0.2ex 0.2ex 0.2ex;
-    background-color: #fff;
+    background-color: #eee;
     text-decoration: none;
 /*     font: 0.9em Tahoma, sans-serif; */
 /*     cursor: default; */
 }
 
-.field {
+#cEd .ta_norm {
     width: 100%;
     border: 1px solid #ddd;
 /*     margin: 0 0 1ex 0; */
@@ -265,5 +387,42 @@ li.thumbs a.pic {
     background-color: #eee;
     text-decoration: none;
 }
+
+#cEd .ta_lock {
+    width: 100%;
+    border: 1px solid #f00;
+    background-color: #FFB2B3;
+    text-decoration: none;
+}
+
+
+#cEd a.infobox {
+    float: right;
+    border-bottom: 1px dashed #c30;
+    text-decoration:none;
+}
+
+    #cEd a.infobox:hover {
+        cursor:help;
+        color:#c30;
+        background:white;
+    }
+
+    #cEd a.infobox span {
+        visibility:hidden;
+        position:absolute;
+        left:-99em;
+        margin-top:1.5em;
+        max-width:300px;
+        padding:1em;
+        text-decoration:none;
+    }
+
+    #cEd a.infobox:hover span {
+        visibility:visible;
+        left:38em;
+        border:1px solid #c30;
+        color:blue; background:white;
+    }
 
 /* ---------------------*/
