--- a/trunk/basement/templates/previous/base.tem.html
+++ b/trunk/basement/templates/previous/base.tem.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Werner Ammon (chaos.de)" />
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-15" />
     <link rel="stylesheet" href="../../css/default/screen.css" type="text/css" />
-    <link rel="stylesheet" href="../../css/devel/eed.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/previous/eed.css" type="text/css" />
     <title>!#specialvars_pagetitle</title>
     <script src="../../js/devel/prototype.js" type="text/javascript"></script>
     <script src="../../js/devel/scriptaculous.js" type="text/javascript"></script>
@@ -56,7 +56,7 @@
 
         <div id="right">
             <!--##hide-level2-->
-	        <h3>#(ueberschrift)</h3>
+            <h3>#(ueberschrift)</h3>
             <ul>
                 <!--##loop-level2-->
                 <li><a href="!{link}" title="!{title}" class="!{class}">!{item}</a></li>
