content im viewer

--- a/trunk/basement/templates/default/viewer-bottom.tem.html
+++ b/trunk/basement/templates/default/viewer-bottom.tem.html
@@ -19,12 +19,12 @@
 <!--##show-->
 <p>#(inhalt)</p>
 
+<p><a href="!#ausgaben_referer">g(back)</a></p>
+<!--##hide-navi-->
 <p>
-    <a href="!#ausgaben_referer">g(back)</a>
-    <!--##hide-navi-->
-    <a href="!#ausgaben_prev"><img src="../../images/default/left.png" width="24" height="18" alt="g(prev)" title="g(prev)" /></a> g(picture) !#ausgaben_aktuell g(of) !#ausgaben_gesamt <a href="!#ausgaben_next"><img src="../../images/default/right.png" width="24" height="18" alt="g(next)" title="g(next)" /></a>
-    <!--##show-->
+    <a href="!#ausgaben_prev">g(prev)</a> g(picture) !#ausgaben_aktuell g(of) !#ausgaben_gesamt <a href="!#ausgaben_next">g(next)</a>
 </p>
+<!--##show-->
 
 <p><a href="!#ausgaben_href"><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
 <p>!#ausgaben_beschreibung</p>
