--- a/trunk/basement/templates/default/viewer-right.tem.html
+++ b/trunk/basement/templates/default/viewer-right.tem.html
@@ -19,15 +19,15 @@
 <!--##show-->
 <p>#(inhalt)</p>
 
+<p><a href="!#ausgaben_referer">g(back)</a></p>
+<!--##hide-navi-->
 <p>
-    <a href="!#ausgaben_referer">g(back)</a>
-    <!--##hide-navi-->
-    <a href="!#ausgaben_prev"><img src="../../images/default/left.png" width="24" height="18" alt="g(prev)" title="g(prev)" /></a> g(picture) !#ausgaben_aktuell g(of) !#ausgaben_gesamt <a href="!#ausgaben_next"><img src="../../images/default/right.png" width="24" height="18" alt="g(next)" title="g(next)" /></a>
-    <!--##show-->
+    <a href="!#ausgaben_prev">g(prev)</a> g(picture) !#ausgaben_aktuell g(of) !#ausgaben_gesamt <a href="!#ausgaben_next">g(next)</a>
 </p>
+<!--##show-->
 
-<p style="float:left"><a href="!#ausgaben_href"><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
-<p style="float:right">!#ausgaben_beschreibung</p>
+<p style="float:left;width:50%;"><a href="!#ausgaben_href"><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
+<p style="float:right;width:45%;">!#ausgaben_beschreibung</p>
 <!-- !#ausgaben_imgsize -->
 
 
