--- a/trunk/basement/templates/default/viewer-bottom.tem.html
+++ b/trunk/basement/templates/default/viewer-bottom.tem.html
@@ -26,7 +26,7 @@
 </p>
 <!--##show-->
 
-<p><a href="!#ausgaben_href"><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
+<p><a href="!#ausgaben_href" title="!#ausgaben_beschriftung"!#ausgaben_lightbox><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
 <p>!#ausgaben_beschreibung</p>
 <!-- !#ausgaben_imgsize -->
 
