--- a/trunk/basement/templates/default/viewer-right.tem.html
+++ b/trunk/basement/templates/default/viewer-right.tem.html
@@ -26,7 +26,7 @@
 </p>
 <!--##show-->
 
-<p style="float:left;width:50%;"><a href="!#ausgaben_href"><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
+<p style="float:left;width:50%;"><a href="!#ausgaben_href" title="!#ausgaben_beschriftung"!#ausgaben_lightbox><img src="!#ausgaben_imgurl" title="!#ausgaben_beschriftung" alt="!#ausgaben_beschriftung" /></a></p>
 <p style="float:right;width:45%;">!#ausgaben_beschreibung</p>
 <!-- !#ausgaben_imgsize -->
 
