authInPlace - tools werden mit dataloop eingebunden

--- a/trunk/basement/templates/default/auth.tem.html
+++ b/trunk/basement/templates/default/auth.tem.html
@@ -36,10 +36,10 @@
     </fieldset>
 <!--##show-->
 
-<!--##hide-authInPlace-->
-<a href="!{newlink}">g(new)</a><br /><br />
-<!--##show-->
-
+<!--##loop-authInPlace-->
+<a href="!{newlink}">!{desc}</a><br />
+<!--##cont-->
+<br />
 <!--##hide-authArea-->
 </form>
 <!--##show-->
