loop-marke von newlink nach link umbenannt

--- a/trunk/basement/templates/default/auth.tem.html
+++ b/trunk/basement/templates/default/auth.tem.html
@@ -37,7 +37,7 @@
 <!--##show-->
 
 <!--##loop-authInPlace-->
-<a href="!{newlink}">!{desc}</a><br />
+<a href="!{link}">!{desc}</a><br />
 <!--##cont-->
 <br />
 <!--##hide-authArea-->
