--- a/trunk/basement/css/default/screen.css
+++ b/trunk/basement/css/default/screen.css
@@ -186,7 +186,12 @@ h1 a:hover, h2 a:hover {
         margin: 5px 20px 5px 10px;
         padding: 5px 10px 5px 5px;
     }
-
+    #left .old {
+        background: #FF9148;
+    }
+    #left .new {
+        background: #A9C0CE;
+    }
 #right {
     float: right;
     width: 19.4%;
