ein versuch/test: csv dateien hochladen und im content einfuegen. daraus wird dann automatisch eine tabelle gebaut

--- a/trunk/basement/templates/default/-141347382.modify.js-nextgen.tem.html
+++ b/trunk/basement/templates/default/-141347382.modify.js-nextgen.tem.html
@@ -258,6 +258,17 @@ Das einfügen von Tags funktioniert ohne Javascript nicht. Bitte aktivieren Sie J
         ebInsertContent(myField, myValue);
     }
 
+    function ebInsertCVS(myField, i, defaultLink, defaultTitle, defaultEnd) {
+        var Title = prompt('Titel:', defaultTitle);
+        var myValue = '[TABCSV'
+                + defaultLink + ';'
+                + prompt('Breite (in %):', '100') + ';'
+                + prompt('Rand (in px):', '1')
+                + ']' + Title
+                + '[/TABCSV' + defaultEnd + ']';
+        ebInsertContent(myField, myValue);
+    }
+
     function ebInsertSel(myField, id, art, defaultTitle, pics, thumbs) {
         var myThumbs = prompt('Bilderstrecke mit Thumbnails anzeigen:', thumbs);
         if ( myThumbs != "TRUE" ) {
