--- a/trunk/basement/templates/default/base.tem.html
+++ b/trunk/basement/templates/default/base.tem.html
@@ -7,10 +7,11 @@
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-15" />
     <link rel="stylesheet" href="../../css/default/screen.css" type="text/css" />
     <link rel="stylesheet" href="../../css/default/eed.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/default/wizard.css" type="text/css" />
     <link rel="stylesheet" href="../../css/default/lightbox.css" type="text/css" />
     <title>!#specialvars_pagetitle</title>
     <script src="../../js/default/prototype.js" type="text/javascript"></script>
-    <script src="../../js/default/scriptaculous.js?load=effects" type="text/javascript"></script>
+    <script src="../../js/default/scriptaculous.js?load=effects,dragdrop" type="text/javascript"></script>
     <script src="../../js/default/lightbox.js" type="text/javascript"></script>
 </head>
 <body>
