bugfixing, add erweitert

--- a/trunk/basement/templates/default/wizard-add.tem.html
+++ b/trunk/basement/templates/default/wizard-add.tem.html
@@ -28,6 +28,7 @@
                     !#element_extend<br />
             <!--##show-->
             <!--##hide-add_menu-->
+                    <input class="text" type="hidden" value="!{hide}" name="hide"/><br />
                 </fieldset>
 
                 <fieldset>
